force-app/main/default/objects/Contact/fields/Documents_Expired__c.field-meta.xml
<CustomField>
    <fullName>Documents_Expired__c</fullName>
    <label>Documents Expired</label>
    <summaryFilterItems>
        <field>Document__c.Is_Expired__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Document__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>