force-app/main/default/objects/Contact/fields/Documents_Expiring_90d__c.field-meta.xml
<CustomField>
    <fullName>Documents_Expiring_90d__c</fullName>
    <label>Documents Expiring In 90d</label>
    <summaryFilterItems>
        <field>Document__c.Is_Expiring_90d__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Document__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>