force-app/main/default/objects/Contact/fields/Documents_Total__c.field-meta.xml
<CustomField>
    <fullName>Documents_Total__c</fullName>
    <label>Documents Total</label>
    <summaryForeignKey>Document__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>